# deva-mcp

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/mcp/: Cargo.toml
crates/mcp/src/: azure_executor.rs  error.rs  github_executor.rs  lib.rs  main.rs  server.rs
crates/mcp/src/tools/: gen.rs  mod.rs  registry.rs
crates/mcp/src/transports/: http.rs  mod.rs  stdio.rs
crates/mcp/tests/: github_tools_test.rs
tests/: github_tools_test.rs
